feat: [IDP-1699]: Fix rule identifier issue